# discord-intergalactic-chat-link

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.md  README.md  TODO.md  backup config.toml
.github/workflows/: main.yml
src/: main.rs
src/intergalactic_chat/: bot.rs  config.rs  mod.rs
src/intergalactic_chat/config/: mod.rs
src/intergalactic_chat/discord/: bans.rs  bot.rs  cache.rs  mod.rs  util.rs
src/intergalactic_chat/discord/commands/: about.rs  mod.rs  network_ban.rs  network_unban.rs  ping.rs
src/intergalactic_chat/mqtt/: mod.rs
