[package]
edition = "2021"
name = "discord-intergalactic-chat-link"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env-file-reader = "0.3.0"
rumqttc = "0.20.0"
serde = "1.0.152"
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.25.0", features = ["macros", "rt-multi-thread"]}
toml = "0.7.1"
