[package]
edition = "2021"
name = "discord-intergalactic-chat-link"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.20.0"
serde = "1.0.152"
serde_json = "1.0.91"
serenity = {version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = {version = "1.25.0", features = ["macros", "rt-multi-thread"]}
toml = "0.7.1"
