[package]
edition = "2021"
name = "discord-intergalactic-chat-link"
version = "0.1.0"

[dependencies]
rumqttc = "0.20.0"
serde = "1.0.152"
serde_json = "1.0.91"
toml = "0.7.1"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
optional = false
version = "0.11.5"

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "signal"]
optional = false
version = "1.25.0"

[profile.release]
lto = true
strip = true
